Fix overflow wrap

--- a/src/components/Post.module.scss
+++ b/src/components/Post.module.scss
@@ -37,6 +37,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  min-width: 0;
 }
 
 .header {
