--- a/src/components/Prose.module.scss
+++ b/src/components/Prose.module.scss
@@ -1,6 +1,6 @@
 .container {
   word-wrap: break-word;
-  word-break: break-all;
+  overflow-wrap: break-word;
   white-space: pre-wrap;
 
   a {
